<resources>
    <string name="app_name">CompositionGame</string>
    <string name="composition_of_the_number">Composition of the number</string>
    <string name="rules_explanation">
        Rules of the game: there will be three figures in front of you,
        two from below and one from above, in two of them there will be numbers. It is necessary
        that the sum of the numbers from the two lower figures is equal to the number in the upper figure,
        to do this, insert the missing number.\n\n
        Example: in the upper circle the number is 7, in one
        from the lower question mark, and in the other the number 4. So in place of the question mark should
        be the number 3, because 3 + 4 = 7
    </string>
    <string name="understood">Understood</string>
    <string name="choose_a_level">Choose a level:</string>
    <string name="test_level">Test</string>
    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_hard">Hard</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Right answers: %s (minimum %s)</string>
    <string name="game_over">Game is over</string>
    <string name="required_score">Required score: %s</string>
    <string name="score_answers">Your score answers: %s</string>
    <string name="required_percentage">Required percentage: %s</string>
    <string name="score_percentage">Your percentage: %s</string>
    <string name="retry">Retry</string>
    <string name="logo_image">Logo image</string>

</resources>